2012-09-20
	update db to 346

2012-09-17
	limited support dem parts and form change
	add command /printallequip and script.printallequip
	add command /unsetallequip and script.unsetallequip
	remove pc.dic (str:str dictionary)
	add pc.var (str:object dictionary, support save and restore standard python object)
	add lib.skills
	add test skill heal, arrow

2012-09-14
	move lib.version to lib.env
	move a part of settings to lib.env
	move license from BSD to MIT

2012-09-01
	add lib.version
	pass rijndael_obj instead of rijndael_key to general.encode/decode
	add MAX_USER_ID, MAX_PC_ID, MAX_PET_ID, MAX_MONSTER_ID
	fix monster.spawn/delete error
	use general.make_id to generate user and pc id when create
	remove serveraddress from server.ini
	add serverbindip to server.ini
	add serverpublicip to server.ini
	check address before bind on windows

2012-08-26
	use system encoding for all log
	move general.Null to general.NullClass
	remove lib/unit_test (no longer use)

2012-08-24
	add type info in database row map (not use _detect_type any more)
	add version info in database dump
	database format version 1.1.0

2012-08-23
	add script.petmotion and command /petmotion motion_id motion_loop
	add script.petmotion_loop and command /petmotion_loop motion_id

2012-08-23
	update db to 345
	add dbmap, change database dump format from raw_list to raw_dict {id: __dict__}
	(auto generate attribute location and boost startup speed)
	add script.size and command /size pc_size
	add script.petstandby_on and command /petstandby_on
	add script.petstandby_off and command /petstandby_off

2012-08-02
	make dump files load and save with pyc format (if DUMP_WITH_ZLIB off)

2012-07-26
	update db to 343
	fix pc look sync problem

2012-07-21
	support drop and pick up item
	add general.make_id
	move monster.send_map to script.send_map
	add script.send_map_obj(map_obj, without_list, *args)
	add script.send_server(*args)
	add PC.item_append, item_pop, warehouse_append, warehouse_pop with system message