@@ -7,6 +7,7 @@ import time
 NAME = "virtualeco"
 LAST_UPDATE = "2012-09-20"
 DATABASE_FORMAT_VERSION = "1.1.0"
+USERDATA_FORMAT_VERSION = "1.1.0"
 
 #runtime
 STARTUP_TIME = time.time()
