@@ -1,4 +1,5 @@
 [main]
+data_ver = 1.1.0
 id = 100
 name = テスト
 gmlevel = 150
@@ -70,11 +71,11 @@ item = 3,4,2,5,1
 warehouse = 
 
 [item]
-1 = 60107702,1
-2 = 10133600,1
-3 = 10020114,1
-4 = 10055500,1
-5 = 60143203,1
+1 = {s7 item_id: i60107702, s5 count: i1, s9 warehouse: i0, s7 pict_id: i60107702}
+2 = {s7 item_id: i10133600, s5 count: i1, s9 warehouse: i0, s7 pict_id: i0}
+3 = {s7 item_id: i10020114, s5 count: i1, s9 warehouse: i0, s7 pict_id: i0}
+4 = {s7 item_id: i10055500, s5 count: i1, s9 warehouse: i0, s7 pict_id: i0}
+5 = {s7 item_id: i60143203, s5 count: i1, s9 warehouse: i0, s7 pict_id: i60143203}
 
 [warehouse]
 
